--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@aws-cdk/core": "1.94.1",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.16",
+    "@aws-cdk/aws-iam": "1.94.1",
+    "@aws-cdk/aws-s3": "1.94.1"
   }
 }
